kubernetes/apps/system/renovate/app/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: renovate-operator
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/icon: renovate.png
    gethomepage.dev/name: Renovate
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/href: https://renovate.${SECRET_DOMAIN}
    gethomepage.dev/app: renovate-operator
    gethomepage.dev/namespace: system
spec:
  hostnames: ["renovate.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: renovate-operator-renovate-operator
          port: 8081
